top line, plane, button

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -15,6 +15,12 @@
 // ≥576px
 +media-breakpoint-down(xs)
 
+  .top-line
+    .plane-wrapper
+      animation: none
+      .plane
+        animation: none
+
 
 /*==========  Mobile First  ==========*/
 
