--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -1,6 +1,7 @@
-$default-font: "roboto-example", sans-serif
-$accent: orange
-$text: #333
+$default-font: "segoe-ui-black-leto", sans-serif
+$accent: #ff1a14
+$text: #184a6f
+$button: #ffa358
 
 // Customization Bootstrap vars from "app/libs/bootstrap/scss/_variables.scss"
 $grid-gutter-width: 30px
