--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -9,7 +9,12 @@
 	background-color: $accent
 	color: #fff
 
+//TODO удалить высоту у html, body, desktop-wrapper
+
+html
+	height: 100%
 body
+	height: 100%
 	font-size: 16px
 	min-width: 320px
 	position: relative
@@ -38,6 +43,136 @@ body
 b, strong
 	font-weight: bold
 
+.h1
+	text-transform: uppercase
+	text-align: center
+	font-size: 50px
+	line-height: 1.35em
+	margin: 0
+	span
+		font-size: 58px
+	strong
+		font-size: 79px
+		color: $accent
+
+p
+	span
+		display: block
+		width: 320px
+		font-size: 28px
+		transform: scale(0.835, 1)
+		transform-style: flat
+
+.desktop-wrapper
+	height: 100%
+	background: url(../img/bg.jpg) center top no-repeat
+
+//Логотип и самолет
+.top-line
+	position: relative
+	padding: 20px 0
+
+	.logo
+		display: block
+		width: 295px
+		margin: 0 auto
+
+	.plane-wrapper
+		position: absolute
+		width: 100%
+		animation: airplane-translate-h-1 12s linear infinite
+		.plane
+			position: absolute
+			animation: airplane-translate-h-2 12s linear infinite
+			width: 232px
+			transform: translateX(-100%)
+
+		// Анимация самолета
+		@keyframes airplane-translate-h-1
+			0%
+				transform: translateX(0%)
+			50%
+				transform: translateX(100%)
+			51%
+				transform: translateX(100%)
+			100%
+				transform: translateX(0%)
+
+		@keyframes airplane-translate-h-2
+			0%
+				transform: translateX(-100%) rotateY(0deg)
+			50%
+				transform: translateX(0) rotateY(0deg)
+			51%
+				transform: translateX(0) rotateY(180deg)
+			100%
+				transform: translateX(-250%) rotateY(180deg)
+
+//Блок с информацией
+.main
+	padding-top: 60px
+
+//Кнопка "В лето"
+.button-order__wrapper
+	margin: 0 auto
+	background: url(../img/wood.png) bottom center no-repeat
+	background-size: 95% auto
+	max-width: 620px
+	min-width: 260px
+	margin-top: 100px
+	position: relative
+
+	.button-order
+		margin: 0 auto
+		display: flex
+		flex-direction: column
+		align-items: center
+		padding: 0 70px 15px 130px
+
+		&__crab
+			width: 140px
+			margin-top: -40px
+			animation: crab-translate-h 1.4s linear alternate infinite
+
+		@keyframes crab-translate-h
+			0%
+				transform: translateX(-85%)
+			100%
+				transform: translateX(85%)
+
+		&__bg
+			display: block
+			padding: 10px
+			background: darken($button, 40%)
+			border-radius: 10px
+			box-shadow: -2px 2px 0px darken($button, 55%)
+			&:hover
+				text-decoration: none
+
+		&__box
+			background-color: $button
+			border: 10px solid lighten($button, 15%)
+			border-bottom-color: darken(desaturate($button, 50%), 15%)
+			border-left-color: darken(desaturate($button, 50%), 15%)
+			border-right-color: lighten($button, 10%)
+			border-radius: 2px
+			cursor: pointer
+			padding: 0 35px 8px
+			text-align: center
+			width: 100%
+			box-shadow: 0 0 8px 7px rgba(255,255,255,.45)
+			span
+				color: darken($accent, 13%)
+				display: block
+				font-size: 72px
+				text-transform: uppercase
+				line-height: 0.9em
+				background: none
+				-webkit-text-fill-color: transparent
+				background: -webkit-linear-gradient(darken($accent, 13%) 0%, darken($accent, 13%) 53%, darken($accent, 25%) 57%, darken($accent, 25%) 100%)
+				-webkit-background-clip: text
+				position: relative
+				filter: drop-shadow(0px 0px 1px darken($accent, 40%))
 
 
 @import "media" // Always at the end
