--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -1,4 +1,3 @@
 @import "_mixins/font-face"
 
-+font-face("roboto-example", "../fonts/RobotoRegular/RobotoRegular")
-+font-face("roboto-example", "../fonts/RobotoBold/RobotoBold", bold)
++font-face("segoe-ui-black-leto", "../fonts/SegoeUIBlack/SegoeUIBlack", 900)
